<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <TableRow>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/title"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_title_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:textSize="16sp"

                    android:textStyle="bold"
                    tools:text="Человек паук нет пути домой" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tv_original_title"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/original_title"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_original_title_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:textSize="16sp"

                    android:textStyle="bold"
                    tools:text="Spider-man No Way Home" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tv_vote_average"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/vote_average"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_vote_average_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:textSize="16sp"

                    android:textStyle="bold"

                    tools:text="8.5" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/release_date"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_release_date_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:textSize="16sp"

                    android:textStyle="bold"
                    tools:text="2018-12-07" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/overview"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_missing_overview_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/missing"

                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TextView
                android:id="@+id/tv_overview_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="saaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" />

        </TableLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_trailer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycle_view_trailer" />
</androidx.constraintlayout.widget.ConstraintLayout>
